# evidenceseeker

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-18-p5-viability-spike.md  2026-06-19-p5-goldset.md
docs/superpowers/specs/: 2026-06-18-p5-viability-spike-design.md  2026-06-19-p5-goldset-design.md
spikes/p5_viability/: README.md  cases.py  compare_model.py  env_check.py  generate_cases.py  metrics.py  run_viability.py  scoring.py  split_dataset.py  worksheet.py
src/evidenceseeker/: __init__.py  config.py  contracts.py
src/evidenceseeker/primitives/: __init__.py  p5_verify_citation.py  types.py
src/evidenceseeker/prompts/: p5_verify_citation.jinja
tests/: _helpers.py  test_contracts.py  test_p5_case_schema.py  test_p5_compare_timings.py  test_p5_env_check.py  test_p5_generate_parse.py  test_p5_metrics.py  test_p5_run_dryrun.py  test_p5_scoring.py  test_p5_spike_config.py  test_p5_split_dataset.py  test_p5_verify_citation.py  test_p5_worksheet.py
tests/acceptance/: run_noninferiority_eval.py
tests/acceptance/gold/: noninferiority.example.json
