# SPDX-License-Identifier: AGPL-3.0-or-later
[project]
name = "evidenceseeker"
version = "0.0.1"
description = "Clinical evidence advisory service (cairn-ehr ecosystem)"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
dependencies = ["pydantic>=2.7", "bmlib[anthropic,ollama]"]

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evidenceseeker"]

[tool.uv.sources]
bmlib = { path = "../../bmlib", editable = true }

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "."
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "bmlib.*"
ignore_missing_imports = true
